--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,6 @@
     <color name="칸나눔">#dcd7d7</color>
     <color name="동래구온천제2동">#4c4b4b</color>
     <color name="이모지아래">#999797</color>
+    <color name="선택">#8080FF</color>
+
 </resources>
