--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context=".Detail.DetailActivity">
+    tools:context=".main.DetailActivity">
 
     <ScrollView
         android:layout_width="match_parent"
