refactor: "🎨다이얼로그 유닛화"
뒤로가기, 포스트제거 다이얼로그 출력을 유닛화

Related to: #139 #153 #163 #173

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,6 @@
     <color name="동래구온천제2동">#4c4b4b</color>
     <color name="이모지아래">#999797</color>
     <color name="선택">#8080FF</color>
-    <color name="purple">#6B3FBA</color>
+    <color name="purple">#8964CA</color>
 
 </resources>
