--- a/app/src/main/res/layout/main_dialog.xml
+++ b/app/src/main/res/layout/main_dialog.xml
@@ -8,8 +8,8 @@
 
     <ImageView
         android:id="@+id/ima"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:layout_width="32dp"
+        android:layout_height="32dp"
         android:src="@drawable/img_main_chat_16dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"/>
@@ -19,18 +19,19 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textStyle="bold"
-        android:textSize="24sp"
+        android:textSize="20sp"
         android:text="@string/common_end"
-        android:layout_marginStart="5dp"
+        android:layout_marginStart="10dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toEndOf="@+id/ima"/>
 
     <TextView
-        android:id="@+id/tv_dia_massage"
+        android:id="@+id/tv_dia_message"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="18sp"
+        android:textSize="16sp"
         android:textStyle="bold"
+        android:layout_marginTop="5dp"
         android:text="@string/dialog_end_again"
         android:paddingBottom="70dp"
         app:layout_constraintTop_toBottomOf="@id/ima"
@@ -41,8 +42,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/common_confirm"
+        android:layout_marginEnd="10dp"
         android:textStyle="bold"
-        android:textSize="18sp"
+        android:textSize="14sp"
         android:textColor="@color/purple"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
@@ -53,9 +55,9 @@
         android:layout_height="wrap_content"
         android:text="@string/common_cancel"
         android:textStyle="bold"
-        android:textSize="18sp"
+        android:textSize="14sp"
         android:textColor="@color/purple"
-        android:layout_marginEnd="30dp"
+        android:layout_marginEnd="40dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/tv_dia_confirm"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
