--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,5 +9,6 @@
     <color name="이모지아래">#999797</color>
     <color name="선택">#8080FF</color>
     <color name="purple">#8964CA</color>
+    <color name="violet">#D5C5F3</color>
 
 </resources>
