--- a/app/src/main/res/layout/main_dialog.xml
+++ b/app/src/main/res/layout/main_dialog.xml
@@ -2,8 +2,9 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingVertical="20dp"
-    android:paddingHorizontal="30dp"
+    android:paddingVertical="10dp"
+    android:paddingHorizontal="10dp"
+    android:background="@color/white"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <ImageView
@@ -11,6 +12,8 @@
         android:layout_width="32dp"
         android:layout_height="32dp"
         android:src="@drawable/img_main_chat_16dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"/>
 
@@ -22,7 +25,8 @@
         android:textSize="20sp"
         android:text="@string/common_end"
         android:layout_marginStart="10dp"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toTopOf="@id/ima"
+        app:layout_constraintBottom_toBottomOf="@+id/ima"
         app:layout_constraintStart_toEndOf="@+id/ima"/>
 
     <TextView
@@ -32,32 +36,36 @@
         android:textSize="16sp"
         android:textStyle="bold"
         android:layout_marginTop="5dp"
+        android:layout_marginStart="10dp"
         android:text="@string/dialog_end_again"
-        android:paddingBottom="70dp"
+        android:paddingBottom="80dp"
         app:layout_constraintTop_toBottomOf="@id/ima"
         app:layout_constraintStart_toStartOf="parent"/>
 
-    <TextView
-        android:id="@+id/tv_dia_confirm"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/bt_dia_confirm"
+        android:layout_width="80dp"
+        android:layout_height="50dp"
         android:text="@string/common_confirm"
         android:layout_marginEnd="10dp"
         android:textStyle="bold"
         android:textSize="14sp"
+        style="@style/Widget.AppCompat.Button.Borderless"
+        android:background="@drawable/custom_ripple_effect"
         android:textColor="@color/purple"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
-    <TextView
-        android:id="@+id/tv_dia_cancel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/bt_dia_cancel"
+        android:layout_width="80dp"
+        android:layout_height="50dp"
         android:text="@string/common_cancel"
         android:textStyle="bold"
         android:textSize="14sp"
         android:textColor="@color/purple"
-        android:layout_marginEnd="40dp"
+        style="@style/Widget.AppCompat.Button.Borderless"
+        android:background="@drawable/custom_ripple_effect"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/tv_dia_confirm"/>
+        app:layout_constraintEnd_toStartOf="@+id/bt_dia_confirm"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
