--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.AppleMarket" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Base.Theme.AppleMarket" parent="Theme.Material3.Light.NoActionBar">
         <!-- Customize your light theme here. -->
         <item name="colorButtonNormal">@color/버튼색</item>
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
