--- a/app/src/main/res/layout/item_main_spinner.xml
+++ b/app/src/main/res/layout/item_main_spinner.xml
@@ -6,21 +6,14 @@
 
     <!-- 액티비티에서 사용자에게 보여지는 스피너 안의 텍스트뷰. 선택된 상태로 취급받음 -->
     <TextView
-        android:id="@android:id/text1"
+        android:id="@+id/tv_spinner_item"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:text="@string/main_naebaecam"
+        android:layout_marginEnd="40dp"
         android:textColor="#000000"
         android:textSize="20sp"
         android:textStyle="bold" />
-
-    <ImageView
-        android:layout_width="20dp"
-        android:layout_height="20dp"
-        android:layout_marginStart="10dp"
-        android:rotation="90"
-        android:layout_gravity="center"
-        android:src="@drawable/img_main_downarrow" />
 
 </LinearLayout>
