Refactor: "🔨 MVVM 패턴을 해치는 부분을 수정해라"
일단 데이터를 로드할때 bufferedReader로는 경로를 지정해줘야 하니 assetManager를 이용했는데 이건 Context가 있어야함
그런데 뷰모델에서 Context를 불러오면 뷰를 직접 가지고 오는거니 MVVM패턴을 해치고
Activity에서 부르면 데이터 관련 로직을 뷰에서 직접 수행하는거니 이것도 해침
그래서 Repository를 만들어서 context를 받아옴
뷰모델 팩토리를 사용해서 파라미터로 Repository를 뷰모델에 넘겨줌
Resolves: 방법이 좀 이상한거 같은데 일단 레포에서 값을 변경해도 각 함수마다 인스턴스가 따로 생성됨, 그래서 싱글턴으로 totalPost를 만들고 그값을 변경해주도록했음
근데 확실히 이방법이 옳은 방법은 아닌듯

Related to: Repo #37 #50 #69

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -64,6 +64,6 @@
         android:src="@drawable/img_main_floating"
         app:backgroundTint="@color/fab"
         app:fabCustomSize="32dp"
-        app:fabSize="normal"
+        app:fabSize="mini"
         app:maxImageSize="12dp" />
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
